--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -7,3 +7,15 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-size: 10pt;
+    text-align: left;
+    background-color: #fffafa00;
+    /* 선택적으로 배경색을 지정할 수 있습니다. */
+    padding: 5px 0;
+    /* 선택적으로 상하 여백을 지정할 수 있습니다. */
+}
