--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,21 +1,63 @@
-.typing-text {
-    font-size: 120pt;
-    font-family: Arial, sans-serif;
-    overflow: hidden;
-    white-space: nowrap;
-    background: linear-gradient(90deg, #00DE4D, #CEf566);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+body {
+    font-family: 'Gowun Batang', serif;
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+    color: #333;
+}
+
+header {
+    background-color: #ffffff;
+    color: #28a745;
+    text-align: center;
+    padding: 20px 0;
+}
+
+header h1 {
+    font-family: 'Bagel Fat One', cursive;
+    font-size: 6em;
+    margin-bottom: 10pt;
+}
+
+header p {
+    color: #8cc168;
+}
+
+.container {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 0 20px;
+}
+
+h2 {
+    font-weight: bold;
+    color: #000;
+}
+
+p {
+    font-weight: 600;
+    color: #444;
+}
+
+.section {
+    margin-bottom: 40px;
+}
+
+.contact {
+    margin-top: 40px;
+    background-color: #f8f9fa;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.contact a {
+    color: #28a745;
+    text-decoration: none;
+    margin-right: 20px;
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    font-size: 10pt;
-    text-align: left;
-    background-color: #fffafa00;
-    /* 선택적으로 배경색을 지정할 수 있습니다. */
-    padding: 5px 0;
-    /* 선택적으로 상하 여백을 지정할 수 있습니다. */
+    text-align: center;
+    margin-top: 40px;
+    color: #666;
 }
