--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -90,3 +90,36 @@ ul li::before {
     margin-right: 5px;
     /* 이모지와 텍스트 사이 간격 조정 */
 }
+
+footer {
+    background-color: #333;
+    padding: 20px 0;
+}
+
+.footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding-left: 20px;
+    /* Adjust this value to control the offset from the center */
+    text-align: left;
+}
+
+.footer-content p {
+    margin: 5px 0;
+    /* Reduce the space between paragraphs */
+    line-height: 1.0;
+    /* Adjust this value to control the line spacing */
+    font-size: 0.9em;
+
+    color: #DCDCDC;
+
+}
+
+footer a {
+    color: #00FF7F;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
